Fix links visibility 15

--- a/content/supplemental/css/search.css
+++ b/content/supplemental/css/search.css
@@ -31,17 +31,12 @@
 
 @media screen and (max-width: 1023px) {
   #search-input {
-    width: 400px;
     margin-left: 4px;
   }
 
   .navbar-end {
    display: flex;
     justify-content: center;
-  }
-
-  .header-btn {
-    margin-left: 20px;
   }
 
   .ai-assistant-link {
@@ -55,6 +50,14 @@
 
   .header-btn {
     justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 20px;
+  }
+
+  div.header-btn a {
+    min-width: 120px;
+    max-width: 210px;
   }
 }
 
@@ -193,21 +196,35 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1420px) {
-  .jmix-link {
-    display: none;
-  }
+    a.slack-link {
+      font-size: 0;
+      padding-left: 2px;
+      padding-right: 10px;
+    }
+
+    a.slack-link img {
+        margin-left: 0;
+    }
+
+    a.slack-link:hover img {
+        transform: scale(1.07);
+    }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1240px) {
-  .slack-link {
-    display: none;
-  }
-}
+@media screen and (min-width: 1024px) and (max-width: 1090px) {
+  a.git-link {
+        font-size: 0;
+        padding-left: 2px;
+        padding-right: 10px;
+      }
 
-@media screen and (min-width: 1024px) and (max-width: 1040px) {
-  .git-link {
-    display: none;
-  }
+      a.git-link img {
+          margin-left: 0;
+      }
+
+      a.git-link:hover img {
+          transform: scale(1.07);
+      }
 }
 
 .git-link, .slack-link {
